still having header issues on tablet mode

--- a/css/index.css
+++ b/css/index.css
@@ -20,10 +20,8 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inher.lambda-img{
-        
-    }it;
-	vertical-align: baseline;
+	font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -81,11 +79,12 @@ header{
     display:flex;
     margin: 2rem auto;
     align-items: space-around;
-    
+    justify-content: flex-start;
     
 }
 header nav{
     margin: 2rem;
+    justify-content: center;
     
 }
 header nav a{
@@ -99,7 +98,8 @@ header nav a{
 
 .lambda-img{
     margin-bottom: 2rem;
-    max-width: 100%;
+    height: 40px;
+    width: 157px;
 }
 
 .jumbo-img{
@@ -141,7 +141,7 @@ header nav a{
     width: 12.5%;
     height: 100px;
     background: black;
-    margin: 2.0rem; 2.5%;
+    margin: 2.0rem 2.5%;
     color: white;
     display: flex;
     align-items: center;
@@ -203,14 +203,9 @@ footer nav a {
 }
 @media (max-width: 768px){
     header{
-        width: 100%;
         flex-flow: column wrap;
         justify-content: center;
-        align-content: center;
         
     }
-    .lambda-img{
-    }
    
-    
 }
